# plover_ghoststroke

./: .gitignore  README.md  ghoststroke.py  setup.cfg  setup.py
ghoststroke/: __init__.py  ghoststroke.py
