[metadata]
name = pghoststroke
version = 0.1.0
description = Logs steno chords that are not found in any loaded dictionary.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = GNU General Public License v3 (GPLv3)
url = https://github.com/yourname/pghoststroke
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = plover plover_plugin steno dictionary

[options]
zip_safe = True
install_requires =
    plover>=4.0.0.dev8
py_modules =
    pghoststroke

[options.entry_points]
plover.extension =
    missing_chords = pghoststroke:MissingChordLogger