[metadata]
name = ghoststroke
version = 0.1.0
description = Detects outlines containing FP that have no translation
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = GNU General Public License v3 (GPLv3)
url = https://github.com/yourname/ghoststroke
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
keywords = plover plover_plugin steno dictionary

[options]
zip_safe = False  # Changed to False for easier debugging
install_requires =
    plover>=4.0.0
py_modules =
    ghoststroke

[options.entry_points]
plover.extension =
    ghoststroke = ghoststroke:GhostStroke